--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -1,5 +1,5 @@
 <template name="WidgetShow">
-  <li id="{{ componentId 'widget' }}" class="widget {{ widgetClass }} hidden"
+  <li id="{{ componentId 'widget' }}" class="{{ widgetClasses }}"
       data-mid="{{ _id }}" {{ gridAttrs }}>
 
     <div class="title-bar" style="height: {{ titleBar.height }}px;">
