--- a/packages/herdict/client/widget.html
+++ b/packages/herdict/client/widget.html
@@ -1,5 +1,6 @@
 <template name="HerdictWidget">
 <h1>Site Availability</h1>
+<p class="subtitle text-muted">Crowdsourced reports from Internet users</p>
 {{# if Template.subscriptionsReady }}
 <h2>{{ country.name }}
 <small>&mdash; {{ category.name }}</small>
