--- a/packages/access-index/client/settings.html
+++ b/packages/access-index/client/settings.html
@@ -1,4 +1,4 @@
-<template name="IMonSettings">
+<template name="AccessIndexSettings">
 {{# if Template.subscriptionsReady }}
 <div class="form-group">
   <label for="country-select">Country</label>
@@ -9,17 +9,8 @@
 </select>
 </div>
 
-<div class="form-group">
-  <label for="i-select">Indicator</label>
-  <select class="indicator form-control" id="i-select" name="indicator">
-  {{# each indicators country.code }}
-    <option value="{{ name }}" {{ isSelected name ../indicator.name }}>{{ name }}</option>
-  {{/each}}
-  </select>
-</div>
-
 <button class="btn btn-primary save-settings">Save</button>
 {{ else }}
-{{ widgetLoading }}
+  {{ widgetLoading }}
 {{/if}}
 </template>
