--- a/packages/widget/client/info.html
+++ b/packages/widget/client/info.html
@@ -25,8 +25,9 @@
   {{/if}}
 
   <p>
-    Click <a href="{{ widget.package.metadata.widget.url }}" target="_blank">here</a> for
-    more information about this widget.
+    <a href="{{ widget.package.metadata.widget.url }}" target="_blank">
+      Explore the data
+    </a>
   </p>
 </template>
 
