--- a/packages/embed/client/widget.html
+++ b/packages/embed/client/widget.html
@@ -1,3 +1,7 @@
 <template name="EmbedWidget">
-  {{{ embedCode }}}
+  {{# if embedCode }}
+    {{{ embedCode }}}
+  {{ else }}
+    <p>Use this widget's settings (the gear icon above) to add an embed code.</p>
+  {{/if}}
 </template>
