--- a/packages/widget/client/embed.html
+++ b/packages/widget/client/embed.html
@@ -7,7 +7,8 @@
       <p class="data-source">
         From <a href="{{ package.metadata.org.url }}" target="_blank">
           {{ package.metadata.org.shortName }}
-        </a>
+        </a> and
+        <a href="http://thenetmonitor.org" target="_blank">Internet Monitor</a>
       </p>
       {{/if}}
 
