--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -4,7 +4,7 @@
 
     {{# if selecting }}
     <div class="selecting-cover">
-      <div class="checkbox checkbox-success checkbox-big select-check">
+      <div class="checkbox checkbox-warning checkbox-big select-check">
         <input type="checkbox" id="{{ componentId 'select' }}"
                name="{{ componentId 'select' }}" value="{{ _id }}" />
         <label for="{{ componentId 'select' }}"></label>
