move checkboxes out of labels - #12586

--- a/packages/embed/client/settings.html
+++ b/packages/embed/client/settings.html
@@ -8,18 +8,14 @@
   <!--
   <div class="form-group">
     <div class="radio">
-      <label>
-        <input type="radio" name="embed-resize" value="scale"
-               checked="{{ resizeModeIs 'scale' }}">
-        Scale
-      </label>
+      <input type="radio" name="embed-resize" value="scale"
+             checked="{{ resizeModeIs 'scale' }}">
+      <label>Scale</label>
     </div>
     <div class="radio">
-      <label>
-        <input type="radio" name="embed-resize" value="reflow"
-               checked="{{ resizeModeIs 'reflow' }}">
-        Reflow
-      </label>
+      <input type="radio" name="embed-resize" value="reflow"
+             checked="{{ resizeModeIs 'reflow' }}">
+      <label>Reflow</label>
     </div>
   </div>
   -->
