--- a/packages/feed/client/widget.html
+++ b/packages/feed/client/widget.html
@@ -1,5 +1,5 @@
 <template name="FeedWidget">
-  <h1>Feed Items</h1>
+  <h1>{{ widgetTitle }}</h1>
   {{# if Template.subscriptionsReady }}
   <h2>{{ feedTitle }}</h2>
   <ul class="feed-items list-unstyled">
