--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -15,6 +15,12 @@
     {{/if}}
 
     <div class="title-bar" style="height: {{ titleBar.height }}px;">
+      {{# if package.metadata.widget.category }}
+      <span class="widget-category-label" title="{{ category.name }}"
+                                          style="{{ categoryStyle }}">
+      </span>
+      {{/if}}
+
       {{# if package.metadata.org }}
       <p class="data-source">
         From <a href="{{ package.metadata.org.url }}" target="_blank">
