--- a/packages/mediacloud-topics/client/settings.html
+++ b/packages/mediacloud-topics/client/settings.html
@@ -1,4 +1,4 @@
-<template name="MediaCloudSettings">
+<template name="MediaCloudTopicsSettings">
 {{# if Template.subscriptionsReady }}
 <div class="form-group">
   <label for="country-select">Country</label>
