--- a/packages/mediacloud-topics/client/widget.html
+++ b/packages/mediacloud-topics/client/widget.html
@@ -1,4 +1,4 @@
-<template name="MediaCloudWidget">
+<template name="MediaCloudTopicsWidget">
 <h1>News Topics</h1>
 {{# if Template.subscriptionsReady }}
 <h2>{{ country.name }}</h2>
