--- a/packages/akamaitraffic/client/widget.html
+++ b/packages/akamaitraffic/client/widget.html
@@ -1,15 +1,13 @@
 <template name="AkamaiTrafficWidget">
   <h1>Web Requests</h1>
-  <h2>{{ regionLabel }}</h2>
   {{# unless Template.subscriptionsReady }}
     {{ widgetLoading }}
   {{/unless}}
-  <div class="akamai-traffic-day epoch">
+  <svg class="legend"></svg>
+  <div class="akamai-traffic-day epoch nicer-colors">
     <h3>Last 24 hours</h3>
   </div>
-  <div class="akamai-traffic-funnel"></div>
-  <div class="akamai-traffic-hour epoch">
+  <div class="akamai-traffic-hour epoch nicer-colors">
     <h3>Last 60 minutes</h3>
   </div>
-  <div class="akamai-traffic-fetched"></div>
 </template>
