--- a/packages/global-voices/client/settings.html
+++ b/packages/global-voices/client/settings.html
@@ -1,14 +1,13 @@
-<template name="FeedSettings">
+<template name="GlobalVoicesSettings">
   <div class="form-group">
-    <label for="feed-title">Widget Title</label>
-    <input id="feed-title" class="form-control" type="text"
-           name="feed-title" value="{{ title }}" >
+    <label for="country-select">Country</label>
+    <select class="country form-control" id="country-select" name="country">
+      {{# each countries }}
+      <option value="{{ code }}" {{ isSelected code ../feed.code }}>
+        {{ name }}
+      </option>
+      {{/each}}
+    </select>
   </div>
-  <div class="form-group">
-    <label for="feed-url">Feed URL</label>
-    <input id="feed-url" class="form-control" type="url"
-           name="feed-url" value="{{ feedUrl }}" >
-    <span class="help-block">RSS and Atom feeds are supported.</span>
-  </div>
-  <button class="btn btn-primary" id="feed-save">Save</button>
+  <button class="btn btn-primary" id="gv-save">Save</button>
 </template>
