note that https is only supported protocol - #12454

--- a/packages/embed/client/settings.html
+++ b/packages/embed/client/settings.html
@@ -3,7 +3,8 @@
     <label for="embed-code">Embed Code</label>
     <textarea id="embed-code" class="form-control"
               name="embed-code" >{{ embedCode }}</textarea>
-    <span class="help-block">Only <code>iframe</code> tags are supported.</span>
+    <span class="help-block">Only <code>iframe</code> tags with URLs
+      that start with <code>https://</code> are supported.</span>
   </div>
   <!--
   <div class="form-group">
