--- a/packages/perma/client/widget.html
+++ b/packages/perma/client/widget.html
@@ -1,5 +1,6 @@
 <template name="PermaWidget">
-<h1 class="rotate">Perma</h1>
+<h1>Perma</h1>
+<p>Recent archives</p>
 <ol class="list-unstyled text-center">
   {{# each archives }}
   <li>
