fix info popover in embed - #12498

--- a/packages/widget/client/embed.html
+++ b/packages/widget/client/embed.html
@@ -15,7 +15,7 @@
       <div class="buttons">
         <a class="button-info" href="#" id="{{ componentId 'Info' }}"
           title="About" data-toggle="popover" data-trigger="click"
-          data-html="true" data-placement="auto right" data-viewport="body"
+          data-html="true" data-placement="right" data-viewport="body"
           data-container="body">
           <span class="glyphicon glyphicon-info-sign"></span>
         </a>
