--- a/packages/tor-clients/client/info.html
+++ b/packages/tor-clients/client/info.html
@@ -14,7 +14,7 @@
     access for blocked clients</dd>
   </dl>
   <p>
-    This widget displays the appoximate daily number of connections to each
+    This widget displays the approximate daily number of connections to each
     of these first-node types for a specific country over the last
     {{ windowLength }} days.
   </p>
