--- a/packages/broadband-cost/client/widget.html
+++ b/packages/broadband-cost/client/widget.html
@@ -1,7 +1,7 @@
 <template name="BroadbandCostWidget">
-{{# if ready }}
 <h1>Broadband Cost</h1>
 <h2>{{ country.name }}</h2>
+{{# if Template.subscriptionsReady }}
 <table class="cost-indicators table table-condensed">
   <tbody>
     <tr>
