--- a/packages/percent-on-broadband/client/info.html
+++ b/packages/percent-on-broadband/client/info.html
@@ -1,7 +1,7 @@
 <template name="PercentOnBroadbandInfo">
 <p>
 This widget shows the percentage of connections to Akamai from a given country
-with bandwidth greater than four megabits per seconds.
+with bandwidth greater than four megabits per second.
 </p>
 <hr />
 {{> DefaultAttribution }}
