--- a/packages/wikiedits/client/widget.html
+++ b/packages/wikiedits/client/widget.html
@@ -4,7 +4,7 @@
   {{# unless Template.subscriptionsReady }}
     {{ widgetLoading }}
   {{/unless}}
-  <ul class="wikiedits list-unstyled">
+  <ul class="wikiedits list-unstyled {{ textDirectionClass }}">
   </ul>
 </template>
 
