fixing bugs in scaling stuff

--- a/packages/widget/client/widget.html
+++ b/packages/widget/client/widget.html
@@ -39,7 +39,7 @@
         {{# if infoShouldShow }}
         <a class="button-info" href="#" id="{{ componentId 'Info' }}"
           title="About" data-toggle="popover" data-trigger="click"
-          data-html="true" data-placement="auto right" data-viewport="#dashboard"
+          data-html="true" data-placement="auto right" data-viewport="#wrapper"
           data-container="body">
           <span class="glyphicon glyphicon-info-sign"></span>
         </a>
@@ -50,7 +50,7 @@
           {{# if providesSettings }}
             <a class="button-settings" href="#" id="{{ componentId 'Settings' }}"
               title="Settings" data-toggle="popover" data-trigger="click"
-              data-html="true" data-placement="auto right" data-viewport="#dashboard"
+              data-html="true" data-placement="auto right" data-viewport="#wrapper"
               data-container="body">
               <span class="glyphicon glyphicon-cog"></span>
             </a>
