--- a/packages/widget/client/jobs.html
+++ b/packages/widget/client/jobs.html
@@ -1,9 +1,5 @@
 <template name="WidgetsJobs">
 <div class="container page">
-  <div class="row">
-    <div class="col-md-offset-1 col-md-10">
-  {{> tabular table=jobsTable class="table table-hover"}}
-    </div>
-  </div>
+  {{> tabular table=jobsTable class="table table-hover table-condensed"}}
 </div>
 </template>
