change 'feed' to 'web feed'

--- a/packages/feed/client/widget.html
+++ b/packages/feed/client/widget.html
@@ -8,7 +8,7 @@
     {{ else }}
       <li>
         <p class="feed-no-feed">
-          Use this widget's settings (the gear icon above) to add a feed URL.
+          Use this widget's settings (the gear icon above) to add an RSS or Atom feed URL.
         </p>
       </li>
     {{/each}}
