update Lumen (cosmetic changes)

--- a/packages/lumen/client/info.html
+++ b/packages/lumen/client/info.html
@@ -1,9 +1,6 @@
 <template name="LumenInfo">
 <p>
-The Chilling Effects database collects and analyzes legal complaints and
-requests for removal of online materials, helping Internet users know their
-rights and understand the law. This widget shows the number of requests for
-removal of online materials Chilling Effects has received over the past month.
+The Lumen database collects and analyzes legal complaints and requests for removal of online materials, helping Internet users to know their rights and understand the law. This widget shows the number of requests for removal of online materials Lumen has received over the past month.
 </p>
 <hr />
 {{> DefaultAttribution }}
