--- a/packages/change-org/client/widget.html
+++ b/packages/change-org/client/widget.html
@@ -1,8 +1,8 @@
-<template name="AkamaiAttacksWidget">
-<h1>Network Attacks</h1>
-<p>Inbound network attacks, percent above average</p>
+<template name="ChangeOrgWidget">
+<h1>Change.org</h1>
+<p>Live signatures on Change.org</p>
 {{# unless Template.subscriptionsReady }}
   {{ widgetLoading }}
 {{/unless}}
-<div class="akamai-attacks world-map"></div>
+<div class="change-org world-map"></div>
 </template>
