--- a/packages/change-org/client/info.html
+++ b/packages/change-org/client/info.html
@@ -1,7 +1,6 @@
-<template name="AkamaiAttacksInfo">
+<template name="ChangeOrgInfo">
 <p>
-  The shading on the map indicates how far above average the current number of
-  country-level inbound network attacks are for each country.
+  Displays a real-time map of signatures on Change.org petitions.
 </p>
 <hr />
 {{> DefaultAttribution }}
