tweak gsma widget display - #12969

--- a/packages/gsma-3g/client/info.html
+++ b/packages/gsma-3g/client/info.html
@@ -1,6 +1,6 @@
 <template name="GSMA3GInfo">
 <p>
-  This widget displays the percentage of mobile connections in a country that are 3G.
+  This widget displays the percentage of mobile connections in a country that are 3G, as well as a trendline showing historical data. 
 </p>
 <hr />
 {{> DefaultAttribution }}
