--- a/packages/gsma-prepaid/client/info.html
+++ b/packages/gsma-prepaid/client/info.html
@@ -1,6 +1,6 @@
 <template name="GSMAPrepaidInfo">
 <p>
-  This widget displays the percentage of mobile connections in a country that are prepaid.
+  This widget displays the percentage of mobile connections in a country that are prepaid, as well as a trendline showing historical data. 
 </p>
 <hr />
 {{> DefaultAttribution }}
