--- a/packages/gsma-total/client/info.html
+++ b/packages/gsma-total/client/info.html
@@ -1,6 +1,6 @@
 <template name="GSMATotalInfo">
 <p>
-  This widget displays the total number of mobile connections in a country.
+  This widget displays the number of mobile connections per 100 people in a country, as well as a trendline showing historical data.
 </p>
 <hr />
 {{> DefaultAttribution }}
