--- a/packages/gsma-4g/client/info.html
+++ b/packages/gsma-4g/client/info.html
@@ -1,6 +1,6 @@
 <template name="GSMA4GInfo">
 <p>
-  This widget displays the percentage of mobile connections in a country that are 4G.
+  This widget displays the percentage of mobile connections in a country that are 4G, as well as a trendline showing historical data. 
 </p>
 <hr />
 {{> DefaultAttribution }}
