--- a/packages/gsma-total/client/widget.html
+++ b/packages/gsma-total/client/widget.html
@@ -4,5 +4,20 @@
 {{# unless Template.subscriptionsReady }}
   {{ widgetLoading }}
 {{/unless}}
-<div class="epoch mobile-connections"></div>
+<div class="current-data">
+  <div class="current-mobile">
+    {{# if currentValue }}
+      <div class="current-value">{{ currentValue }}</div>
+      <div class="value-label">per 100 people</div>
+    {{ else }}
+      {{# if Template.subscriptionsReady }}
+      <div class="no-pop-data">Insufficient data.</div>
+      {{/if}}
+    {{/if}}
+  </div>
+  <div class="trend-line">
+    <div class="epoch mobile-connections"></div>
+    <div class="trend-label">{{ trendLabel }}</div>
+  </div>
+</div>
 </template>
