use IM API - #13063

--- a/packages/broadband-cost/client/widget.html
+++ b/packages/broadband-cost/client/widget.html
@@ -7,7 +7,7 @@
     <tr>
     {{# each indicators }}
     <td class="{{ cellColor }}">
-      {{# if value }}{{ value }}{{ else }}&ndash;{{/if}}
+      {{# if value }}{{ percentValue }}{{ else }}&ndash;{{/if}}
     </td>
     {{/each}}
     </tr>
