--- a/packages/access-index/client/widget.html
+++ b/packages/access-index/client/widget.html
@@ -3,7 +3,7 @@
   {{# with country }}
     <h1>IM Access Index</h1>
     <h2>{{ name }} <small>
-        <a class="out-link" href="{{ access.url }}" target="_blank"
+        <a class="out-link" href="{{ accessUrl }}" target="_blank"
           title="Visit this country in Internet Monitor">
           <span class="glyphicon glyphicon-new-window"></span></a></small></h2>
     <div class="clearfix">
@@ -22,7 +22,7 @@
       <div class="progress-bar progress-bar-success access-score" role="progressbar"
         aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
        style="width: {{ barWidth }}%;">
-        {{ access.score }}
+        {{ score }}
       </div>
     </div>
   {{/with}}
