--- a/packages/imon-scatter/client/widget.html
+++ b/packages/imon-scatter/client/widget.html
@@ -1,4 +1,4 @@
 <template name="IMonScatterWidget">
-  <h1>Scatter Plot</h1>
+  <h1>{{ title }}</h1>
   <div class="scatter-chart"></div>
 </template>
