add rdr and fix language

--- a/packages/ranking-digital-rights/client/info.html
+++ b/packages/ranking-digital-rights/client/info.html
@@ -1,6 +1,9 @@
 <template name="RDRInfo">
 <p>
-  RDR Info
+This widget displays data from the 2015 Corporate Accountability Index, which
+ranks 16 of the world’s most powerful Internet and telecommunications companies
+on their disclosed commitments, policies, and practices that affect users’
+freedom of expression and privacy.
 </p>
 <hr />
 {{> DefaultAttribution }}
