--- a/packages/ranking-digital-rights/client/widget.html
+++ b/packages/ranking-digital-rights/client/widget.html
@@ -1,5 +1,5 @@
 <template name="RDRWidget">
-<h1>Ranking Digital Rights</h1>
+<h1>Corporate Accountability Index</h1>
 <h2>{{ category }}</h2>
 <table class="table table-condensed">
   <thead>
