--- a/packages/ranking-digital-rights/client/info.html
+++ b/packages/ranking-digital-rights/client/info.html
@@ -5,6 +5,16 @@ ranks 16 of the world’s most powerful Internet and telecommunications companie
 on their disclosed commitments, policies, and practices that affect users’
 freedom of expression and privacy.
 </p>
+<p>
+The widget allows you to compare scores for companies that offer mobile
+services, fixed broadband, social networking &amp; blog services, instant messaging
+&amp; calls, search, and mail services. 
+</p>
+<p>
+More on the methodology powering the index is online at <a
+  href="https://rankingdigitalrights.org/index2015/methodology/">Ranking
+  Digital Rights</a>.
+</p>
 <hr />
 {{> DefaultAttribution }}
 </template>
