Tweak WebIndex descriptions

--- a/packages/webindex/client/info.html
+++ b/packages/webindex/client/info.html
@@ -1,8 +1,6 @@
 <template name="WebIndexInfo">
-<p>
-  Displays chloropleth map of the globe in which areas are shaded or patterned in proportion to the measurement of the statistical variable.
-  Choose which measurement or variable to display from drop down.
-</p>
+<p>The Web Index measures the Web’s contribution to social, economic and political progress in countries across the world. The Index combines existing secondary data with new primary data derived from an evidence-based expert researcher assessment survey. It covers 86 countries; scores are given in the areas of access; freedom and openness; relevant content; and empowerment.</p>
+<p>The shading on the map indicates how countries rank according to the index or subindex value selected from the drop down.</p>
 <hr />
 {{> DefaultAttribution }}
 </template>
