--- a/packages/webindex/client/settings.html
+++ b/packages/webindex/client/settings.html
@@ -4,7 +4,7 @@
   <label for="metric-select">Metric</label>
   <select class="metric form-control" id="metric-select" name="metric">
   {{# each metrics }}
-  <option value="{{ id }}" {{ isSelected id ../metric.id }}>{{ name }}</option>
+  <option value="{{ id }}" {{ isSelected id ../metric.id }}>{{{ indentedName name level}}}</option>
   {{/each}}
   </select>
 </div>
