--- a/packages/imon-scatter/client/info.html
+++ b/packages/imon-scatter/client/info.html
@@ -1,7 +1,12 @@
 <template name="IMonScatterInfo">
 <p>
-The data, generally based on surveys, includes users who have accessed the
-Internet over the last twelve months.
+This widget displays a scatterplot of two chosen metrics from the broader
+Internet Monitor dataset across all countries.
+</p>
+
+<p>
+Options for each axis include log transforming the data and jittering to avoid
+overlap.
 </p>
 <hr />
 {{> DefaultAttribution }}
