Show RDR company and country names for services

--- a/packages/ranking-digital-rights/client/widget.html
+++ b/packages/ranking-digital-rights/client/widget.html
@@ -4,7 +4,7 @@
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th>Company</th>
+      <th><div class="service-header">Service</div><div class="company-header">Company</div></th>
       {{# each metrics }}
         <th class="small {{ classes }} {{ isSorted }}" title="{{ name }}">{{ name }}</th>
       {{/each}}
