--- a/packages/ranking-digital-rights/client/settings.html
+++ b/packages/ranking-digital-rights/client/settings.html
@@ -1,21 +1,34 @@
 <template name="RDRSettings">
-<div class="form-group">
-  <label for="category-select">Category</label>
-  <select class="category form-control" id="category-select" name="category">
-  {{# each categories }}
-  <option value="{{ this }}" {{ isSelected this ../category }}>{{ this }}</option>
-  {{/each}}
-  </select>
-</div>
 
-<div class="form-group">
-  <label for="sort-metric">Sort by</label>
-  <select class="form-control" id="sort-metric" name="sort-metric">
-  {{# each metrics }}
-  <option value="{{ name }}" {{ isSelected name ../sortMetric }}>{{ name }}</option>
-  {{/each}}
-  </select>
-</div>
 
-<button class="btn btn-primary save-settings">Save</button>
+  <div class="form-group">
+    <label for="granularity-select">Granularity</label>
+    <select class="granularity form-control" id="granularity-select" name="granularity">
+      {{# each granularities }}
+      <option value="{{ this }}" {{ isSelected this ../granularity }}>{{ this }}</option>
+      {{/each}}
+    </select>
+  </div>
+
+  
+  <div class="form-group">
+    <label for="category-select">Category</label>
+    <select class="category form-control" id="category-select" name="category">
+      {{# each categories }}
+      <option value="{{ this }}" {{ isSelected this ../category }}>{{ this }}</option>
+      {{/each}}
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label for="sort-metric">Sort by</label>
+    <select class="form-control" id="sort-metric" name="sort-metric">
+      {{# each metrics }}
+      <option value="{{ name }}" {{ isSelected name ../sortMetric }}>{{ name }}</option>
+      {{/each}}
+    </select>
+  </div>
+
+  <button class="btn btn-primary save-settings">Save</button>
+
 </template>
